@@ -28,6 +28,9 @@ Changes with Apache 2.4.1
 
   *) Doxygen fixes and improvements. [Joe Orton, Igor Galić]
 
+  *) core: Fix building against PCRE 8.30 by switching from the obsolete
+     pcre_info() to pcre_fullinfo(). PR 52623 [Ruediger Pluem, Rainer Jung]
+
 Changes with Apache 2.4.0
 
   *) SECURITY: CVE-2012-0031 (cve.mitre.org)
